maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:2: error: not found: value keepHandOnSideWall
  while(!estSurBiscuit()){keepHandOnSideWall()}
                          ^Escaper:6: error: not found: value keepHandOnSideWall
keepHandOnSideWall(){
^